# data-gather

./: README.md  configuration.conf
data-gather-v1/: Cargo.toml
v1/: .env  Cargo.toml  memo.txt  structure.txt
v1/src/: handlers.rs  main.rs  routes.rs  state.rs  utils.rs
v1/static/: index.html
