[package]
name = "v1"                    # 패키지 이름 설정
version = "0.1.0"              # 패키지 버전
edition = "2021"               # Rust 에디션 설정 (Rust 2021)

[dependencies]
actix-web = "4.0"              # Actix Web 라이브러리: 서버 생성 및 라우트 처리를 위한 웹 프레임워크
actix-files = "0.6"            # Actix Files: 정적 파일(HTML, CSS, JS 등)을 서비스하기 위한 라이브러리
actix-cors = "0.6"             # Actix CORS: 교차 출처 요청을 처리하기 위한 설정 (API 요청 시 필요할 수 있음)
serde = { version = "1.0", features = ["derive"] } # Serde: JSON 및 기타 포맷의 직렬화/역직렬화를 위한 라이브러리
serde_json = "1.0"             # Serde JSON: JSON 데이터를 다루기 위한 Serde의 확장 라이브러리
tokio = { version = "1", features = ["full"] }     # Tokio: 비동기 실행을 위한 런타임 (Actix Web의 비동기 기능에 필요)
